--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,9 @@ h1, h2 {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   align-items: center; }
+  @media all and (min-width: 768px) {
+    .date-container {
+      width: 100%; } }
 
 .date {
   -webkit-appearance: none;
@@ -56,6 +59,21 @@ h1, h2 {
 /*Estilos checklist*/
 .mood-container {
   margin-bottom: var(--spacer); }
+
+/*Estilos mensaje*/
+.message-container {
+  margin-bottom: var(--spacer);
+  background-color: var(--c-mediumdark);
+  padding: 5px 15px;
+  border-radius: 2px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: none; }
+  @media all and (min-width: 768px) {
+    .message-container {
+      width: 100%; } }
 
 /*Estilos botones*/
 .submit-container {
