--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@
 /*Estilos generales*/
 * {
   font-family: 'Amatic SC', cursive;
-  font-size: 24px; }
+  font-size: 24px;
+  box-sizing: border-box;
+  margin: 0; }
   @media all and (min-width: 768px) {
     * {
       font-size: 32px; } }
@@ -31,6 +33,30 @@ h1, h2 {
     .editor-container {
       margin: 60px; } }
 
+.pointer {
+  cursor: pointer; }
+
+/*CALENDARIO*/
+/*Estilos header*/
+.header {
+  background-color: var(--c-background);
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: center; }
+
+.header-content {
+  color: white;
+  font-size: 60px;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer; }
+
+/*Estilos contenido calendario*/
+.smile-calendar {
+  display: grid; }
+
+/*EDITOR*/
 /*Estilos fecha*/
 .date-container {
   margin-bottom: var(--spacer);
@@ -79,7 +105,8 @@ h1, h2 {
 .submit-container {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  cursor: pointer; }
 
 .send-button {
   color: var(--c-light);
@@ -90,12 +117,14 @@ h1, h2 {
   background-color: var(--c-background);
   margin-top: 30px;
   margin-bottom: 10px;
-  color: white; }
+  color: white;
+  cursor: pointer; }
 
 .cancel-button {
   font-size: 20px;
   border: none;
-  background-color: var(--c-light); }
+  background-color: var(--c-light);
+  cursor: pointer; }
 
 .submit-button {
   color: var(--c-light);
