--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,8 @@
 * {
   font-family: 'Amatic SC', cursive;
   font-size: 24px;
+  box-sizing: border-box;
+  margin: 0;
 
   @media all and (min-width: 768px){
     font-size: 32px;
@@ -33,6 +35,33 @@ h1, h2 {margin: 0;}
   }
 }
 
+.pointer {cursor: pointer;}
+
+/*CALENDARIO*/
+/*Estilos header*/
+.header {
+    background-color: var(--c-background);
+    position: fixed;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.header-content {
+  color: white;
+  font-size: 60px;
+  font-weight: bold;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/*Estilos contenido calendario*/
+.smile-calendar {
+  display: grid;
+}
+
+
+/*EDITOR*/
 /*Estilos fecha*/
 .date-container {
   margin-bottom: var(--spacer);
@@ -89,6 +118,7 @@ h1, h2 {margin: 0;}
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 
 .send-button {
@@ -101,12 +131,15 @@ h1, h2 {margin: 0;}
   margin-top: 30px;
   margin-bottom: 10px;
   color: white;
+  cursor: pointer;
 }
 
 .cancel-button {
   font-size: 20px;
   border: none;
   background-color: var(--c-light);
+  cursor: pointer;
+
 }
 
 .submit-button {
