--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,12 @@ h1, h2 {
   font-size: 60px;
   font-weight: bold;
   text-decoration: none;
-  cursor: pointer; }
+  cursor: pointer;
+  text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+  transition: text-shadow ease-in-out .3s; }
+
+.header-content:hover {
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); }
 
 /*Estilos contenido calendario*/
 .smile-calendar {
@@ -65,7 +70,7 @@ h1, h2 {
   display: flex;
   justify-content: space-between;
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   display: flex;
   align-items: center; }
   @media all and (min-width: 768px) {
@@ -86,20 +91,29 @@ h1, h2 {
 .mood-container {
   margin-bottom: var(--spacer); }
 
+label {
+  margin-left: 5px; }
+
 /*Estilos mensaje*/
 .message-container {
   margin-bottom: var(--spacer);
   background-color: var(--c-mediumdark);
   padding: 5px 15px;
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  border: none; }
-  @media all and (min-width: 768px) {
-    .message-container {
-      width: 100%; } }
+  border: none;
+  width: 100%;
+  transition: box-shadow ease-in-out .3s; }
+
+.message-container:hover {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4); }
+
+.message-container:focus {
+  outline: none;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4); }
 
 /*Estilos botones*/
 .submit-container {
@@ -113,18 +127,27 @@ h1, h2 {
   width: 100%;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   background-color: var(--c-background);
   margin-top: 30px;
   margin-bottom: 10px;
   color: white;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: box-shadow ease-in-out .3s; }
+
+.send-button:hover {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4); }
 
 .cancel-button {
   font-size: 20px;
   border: none;
   background-color: var(--c-light);
-  cursor: pointer; }
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity ease-in-out .3s; }
+
+.cancel-button:hover {
+  opacity: .6; }
 
 .submit-button {
   color: var(--c-light);
@@ -138,3 +161,6 @@ h1, h2 {
   font-size: 20px;
   border: none;
   background-color: var(--c-light); }
+
+button:focus {
+  outline: none; }
