--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,12 @@ h1, h2 {margin: 0;}
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
+  text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+  transition: text-shadow ease-in-out .3s;
+}
+
+.header-content:hover {
+  text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 /*Estilos contenido calendario*/
@@ -70,7 +76,7 @@ h1, h2 {margin: 0;}
   display: flex;
   justify-content: space-between;
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   display: flex;
   align-items: center;
 
@@ -96,21 +102,31 @@ h1, h2 {margin: 0;}
     margin-bottom: var(--spacer);
 }
 
+
+label {margin-left: 5px;}
+
 /*Estilos mensaje*/
 .message-container {
   margin-bottom: var(--spacer);
   background-color: var(--c-mediumdark);
   padding: 5px 15px;
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   -webkit-appearance: none;
   -moz-appearance:    none;
   appearance:         none;
   border: none;
+  width: 100%;
+  transition: box-shadow ease-in-out .3s;
+}
 
-  @media all and (min-width: 768px){
-    width: 100%;
-  }
+.message-container:hover {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+}
+
+.message-container:focus {
+  outline: none;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
 }
 
 /*Estilos botones*/
@@ -126,12 +142,18 @@ h1, h2 {margin: 0;}
   width: 100%;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
   background-color: var(--c-background);
   margin-top: 30px;
   margin-bottom: 10px;
   color: white;
   cursor: pointer;
+  transition: box-shadow ease-in-out .3s;
+
+}
+
+.send-button:hover{
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
 }
 
 .cancel-button {
@@ -139,7 +161,12 @@ h1, h2 {margin: 0;}
   border: none;
   background-color: var(--c-light);
   cursor: pointer;
+  opacity: 1;
+  transition: opacity ease-in-out .3s;
+}
 
+.cancel-button:hover{
+  opacity: .6;
 }
 
 .submit-button {
@@ -155,4 +182,8 @@ h1, h2 {margin: 0;}
   font-size: 20px;
   border: none;
   background-color: var(--c-light);
+}
+
+button:focus {
+  outline: none;
 }
