--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,8 @@
   --c-mediumdark: #e6e6e6;
   --c-background: #0099cc;
   --c-text: #4d4d4d;
-  --c-happy: #ffcc00;
-  --c-sad: #ff9933;
+  --c-good: #ffcc00;
+  --c-bad: #ff8833;
   --spacer: 30px;
 }
 
@@ -41,14 +41,14 @@ h1, h2 {margin: 0;}
 /*Estilos header*/
 .header {
     background-color: var(--c-background);
-    position: fixed;
     width: 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
 }
 
 .header-content {
-  color: white;
+  color: var(--c-light);
   font-size: 60px;
   font-weight: bold;
   text-decoration: none;
@@ -62,8 +62,53 @@ h1, h2 {margin: 0;}
 }
 
 /*Estilos contenido calendario*/
-.smile-calendar {
+.mood-list {
+  list-style: none;
+  padding-left: 0;
+  margin: var(--spacer);
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+  justify-items: center;
+
+  @media all and (min-width: 768px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  @media all and (min-width: 1024px) {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
+.today-mood {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media all and (min-width: 768px) {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+.good-day {
+  background-color: var(--c-good);
+}
+
+.bad-day {
+  background-color: var(--c-bad);
+}
+
+.mood-value {
+  font-size: 32px;
+  font-weight: bold;
+  color: var(--c-light);
+
+  @media all and (min-width: 768px) {
+    font-size: 36px;
+  }
 }
 
 
@@ -146,7 +191,7 @@ label {margin-left: 5px;}
   background-color: var(--c-background);
   margin-top: 30px;
   margin-bottom: 10px;
-  color: white;
+  color: var(--c-light);
   cursor: pointer;
   transition: box-shadow ease-in-out .3s;
 
